// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`google tag manager noscript tag matches snap for dev environment 1`] = `
<noscript>
  <iframe
    height="0"
    src="https://www.googletagmanager.com/ns.html?id=GTM-W9W847"
    style="display:none;visibility:hidden"
    width="0"
  />
</noscript>
`;

exports[`google tag manager noscript tag matches snap prod environment 1`] = `
<noscript>
  <iframe
    height="0"
    src="https://www.googletagmanager.com/ns.html?id=GTM-T2LNGD"
    style="display:none;visibility:hidden"
    width="0"
  />
</noscript>
`;

exports[`google tag manager script tag matches snap for dev environment 1`] = `
<script>
  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-W9W847');
</script>
`;

exports[`google tag manager script tag matches snap prod environment 1`] = `
<script>
  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-T2LNGD');
</script>
`;
